Changelog
=========

0.9.7.dev (unreleased)
----------------------

* Merge and cleanup changelogs
  [kdeldycke]

* Fix declaration of implemented interface to support both Plone 4 and Plone 3
  [kdeldycke]

0.9.6 (2010-12-23)
------------------

* Replace os.system (deprecated) by Popen
  [tbenita]

* New style interfaces for Plone 4 compatibility
  [hpeteragitator]

* Replace print by python's logging
  [toutpt]

0.9.4 - 2009-09-10
------------------

* Initial release on pypi
  [toutpt]

0.9.2
-----

* Added zip_to_text transformation
  [zegor]

0.9.1
-----

* cleanup (print, logs, comments)
* pdf_to_html command asks for utf-8