@@ -4,6 +4,9 @@ Changelog
 0.9.7.dev (unreleased)
 ----------------------
 
+* Plone 4 support in tests.
+  [thomasdesvenain]
+
 * Merge and cleanup changelogs
   [kdeldycke]
 
